# devcontainer-python

./: .editorconfig  .gitignore  LICENSE  pyproject.toml
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
