[tool.poetry]
name = "devcontainer-python"
version = "0.1.0"
description = ""
authors = ["Akihiro Chida <95008746+a-chida@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
